--- a/Biocell/medicine-production.html
+++ b/Biocell/medicine-production.html
@@ -90,7 +90,7 @@
 				<!-- Website Logo -->
 				<div class="logo-header logo-dark me-md-5">
 					<a href="index.html"
-						><img src="image/biocell-name.jpg" alt="logo"
+						><img src="image/biocell-logo-name-by-side.png" alt="logo"
 					/></a>
 				</div>
 
