--- a/Biocell/about-us.html
+++ b/Biocell/about-us.html
@@ -322,8 +322,8 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 							<p>We are committed to sustainability and ethical practices. Our products are sourced from organic farms and processed with the utmost care to preserve their natural potency. We invest in continuous research and development to ensure our products meet the highest standards of quality and efficacy.</p>
 							<p>Our mission is to provide high-quality herbal medicines that support and nurture the body’s natural healing processes. We believe in the wisdom of nature and the potential of scientific innovation to create products that are both effective and safe. Our vision is to be a global leader in herbal medicine, providing innovative solutions that empower individuals to lead healthier lives. We strive to educate and inspire our customers about the benefits of natural health products and to make a positive impact on the world.</p>
 							<figure class="wp-container-5 wp-block-gallery-3 wp-block-gallery has-nested-images columns-3 is-cropped">
+								<figure class="wp-block-image size-large"><img src="images-biocell/_MG_3226.JPG" alt="/"></figure>
 								<figure class="wp-block-image size-large"><img src="images-biocell/_MG_2961.JPG" alt="/"></figure>
-								<figure class="wp-block-image size-large"><img src="image/lab/lab (16).jpg" alt="/"></figure>
 								<figure class="wp-block-image size-large"><img src="images-biocell/_MG_2915.JPG" alt="/"></figure>
 								<figure class="wp-block-image size-large"><img src="images-biocell/_MG_2808.JPG" alt="/"></figure>
 								<figure class="wp-block-image size-large"><img src="images-biocell/_MG_2728.JPG" alt="/"></figure>
