--- a/app website/index.html
+++ b/app website/index.html
@@ -28,7 +28,8 @@
 
   <div class="banner">
    <img src="./images/background.png" alt="" class="banner-bg">
-   <div class="download-btn" id="banner-btn"><a href="#">Download App</a></div>
+   <div class="download-btn" id="banner-btn"><a href="#">
+      অ্যাপ ডাউনলোড করুন</a></div>
   </div>
 
 </body>
