--- a/app website/index.html
+++ b/app website/index.html
@@ -3,8 +3,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Sastho Kotha</title>
-   <meta name="description" content="SasthoKotha - Free Telemedicine App">
+   <title>স্বাস্থ্যকথা</title>
+   <meta name="description" content="স্বাস্থ্যকথা - Free Telemedicine App">
    <link rel="icon" href="./images/icon-transparent.png">
 
    <link rel="stylesheet" href="style.css">
