--- a/telemed web/index.html
+++ b/telemed web/index.html
@@ -202,8 +202,8 @@
     </div>
    </div>
 
-   <div class="footer-area">
-      <div class="w-3/4 flex m-auto justify-center items-center gap-4 border-2 rounded-xl border-primary font-semibold mt-20">
+   <div class="footer-area bg-gradient-to-r from-secondary to-primary relative mt-32 md:mt-48">
+      <div class="w-3/4 flex m-auto justify-center items-center gap-4 border-2 rounded-xl border-primary font-semibold bg-white absolute -top-16 md:-top-20 left-0 right-0 m-auto">
          <img src="./images/QR-code.png" alt="" class="w-24 sm:w-28 md:w-40 h-24 sm:h-28 md:h-40">
          <div>
             <h4 class="text-xl md:text-2xl text-primary">ডাউনলোড করতে</h4>
@@ -211,6 +211,84 @@
          </div>
       </div>
 
+      <div class="space-y-8 md:space-y-0 md:grid md:grid-cols-3 gap-4 pt-28 md:pt-36 px-4 sm:px-6 md:px-16 text-white">
+         <div class="space-y-4">
+            <img src="./images/logo-white.png" alt="logo" class="w-10/12 bg-transparent">
+            <h4 class="">স্বাস্থ্যকথা একটি পূর্ণাঙ্গ টেলিমেডিসিন মোবাইল আপ্লিকেশন। স্বাস্থ্যকথা অ্যাপ ব্যবহার করে দেশব্যাপী বিনামূল্যে স্বাস্থ্য সেবা নিশ্চিতকরনের উদ্দেশে আমাদের পথচলা।</h4>
+            <div class="flex items-center gap-4">
+               <img src="./images/fb-icon.png" alt="" class="w-7 h-7">
+               <img src="./images/linkedin-icon.png" alt="" class="w-7 h-7">
+               <img src="./images/insta-icon.png" alt="" class="w-7 h-7">
+               <img src="./images/youtube-icon.png" alt="" class="w-9 h-6">
+            </div>
+         </div>
+
+         <div class="space-y-2">
+            <h4 class="text-xl font-semibold mb-2">Services</h4>
+            <div class="flex items-center gap-2">
+               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
+               <h5 class="">অ্যাপ ডাউনলোড করুন</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
+               <h5 class="">ফ্রীলান্স হাব (বিডি) ওয়েবসাইট</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
+               <h5 class="">অ্যাপ ব্যবহারের নিয়ম</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
+               <h5 class="">ফার্মেসি এন্রলমেন্ট করুন</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
+               <h5 class="">ডাক্তার লিস্ট</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
+               <h5 class="">আমাদের পার্টনার ফার্মেসি</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
+               <h5 class="">শর্তাবলী</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
+               <h5 class="">গোপনীয়তা নীতি</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
+               <h5 class="">ডেটা সংরক্ষণ নীতি</h5>
+            </div>
+         </div>
+
+         <div class="space-y-2">
+            <h4 class="text-xl font-semibold mb-2">Get In Touch</h4>
+            <div class="flex  gap-2">
+               <img src="./images/location-icon.png" alt="" class="w-4 h-5 mt-1">
+               <h5 class="">Northern Khan Heights House # 34, (Lift#11) Block # D, Mirpur -11, Rd No 3, Dhaka 1216, Dhaka, Bangladesh.</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/mail-icon.png" alt="" class="w-4 h-3">
+               <h5 class="">info@shastokotha.com</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/phone.png" alt="" class="w-4 h-4">
+               <h5 class="">+880 1826-322233</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/phone.png" alt="" class="w-4 h-4">
+               <h5 class="">+880 1812-266155</h5>
+            </div>
+            <div class="flex items-center gap-2">
+               <img src="./images/watch-icon.png" alt="" class="w-4 h-4">
+               <h5 class="">24 Hr / 365 Days</h5>
+            </div>
+         </div>
+       </div>
+
+       <div class="w-full py-8 px-4 sm:px-6 md:px-16"><h3 class="rounded-lg border text-center p-3 text-white bg-[#e6e6e640]">@2024 - All rights are Reserved by freelance Hub (Bd) Limited</h3></div>
 
    </div>
 </body>
