--- a/Biocell/index.html
+++ b/Biocell/index.html
@@ -910,7 +910,7 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
               </div>
               <div class="box">
                 <div><i class="fa-solid fa-bed"></i></div>
-                <h3 class="number">230k+</h3>
+                <h3 class="number">23500+</h3>
                 <h4>Patients</h4>
               </div>
             </div>
