--- a/telemed web/index.html
+++ b/telemed web/index.html
@@ -66,7 +66,7 @@
          <h4 class="text-2xl md:text-3xl text-tertiary font-bold my-3">আপনার নিকটস্থ ফার্মেসিতেই পাচ্ছেন আমাদের সেবাসমূহ</h4>
          <h4 class="text-sm md:text-lg text-gray-600">আপনার এলাকার পরিচিত ফার্মেসি স্টোরের সহযোগিতায় আমাদের স্মার্ট মোবাইল অ্যাপ ব্যবহার করে বিশেষজ্ঞ ডাক্তারের সেবা নিন রাত-দিন ২৪ ঘণ্টা</h4>
 
-         <div class="grid grid-cols-2 gap-4 pt-8">
+         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 pt-8">
             <div class="bg-gradient-to-r from-secondary to-primary p-1 rounded-lg">
                <div class="flex gap-3 rounded items-center px-3 sm:px-6 py-4 bg-white">
                   <img src="./images/detail-icon-01.png" alt="icon" class="w-9 h-9">
@@ -110,7 +110,7 @@
 
    <div class="flex flex-col md:flex-row gap-4 mx-4 md:mx-6" id="services">
       <div class="w-full md:w-1/2">
-         <img src="./images/services.png" alt="" class="w-full">
+         <img src="./images/doctor-biocell.png" alt="" class="w-full">
         </div>
 
       <div class="w-full md:w-1/2 text-end">
@@ -118,7 +118,7 @@
          <h4 class="text-2xl md:text-3xl text-tertiary font-bold my-3">সার্বক্ষণিক অভিজ্ঞ এমবিবিএস ডাক্তার আছেন আপনারই জন্য</h4>
          <h4 class="text-sm md:text-lg text-gray-600">আপনাদের নিরাপদ ও নিরবচ্ছিন্ন স্বাস্থ্য সেবা প্রদানের উদ্দেশে আমাদের রয়েছে একঝাঁক অভিজ্ঞ ও রেজিস্টার্ড চিকিৎসক যারা আপনার চিকিৎসা প্রদানেই নিয়োজিত</h4>
 
-         <div class="grid grid-cols-2 gap-4 pt-8 md:pl-4">
+         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 pt-8 md:pl-4">
             <div class="flex gap-2">
                <img src="./images/tick-mark.png" alt="icon" class="w-7 h-7 mt-2 md:mt-[2px]">
                <div class="text-start">
@@ -211,7 +211,7 @@
          </div>
       </div>
 
-      <div class="space-y-8 md:space-y-0 md:grid md:grid-cols-3 gap-4 pt-28 md:pt-36 px-4 sm:px-6 md:px-16 text-white">
+      <div class="space-y-8 md:space-y-0 grid grid-cols-1 md:grid-cols-3 gap-4 pt-28 md:pt-36 px-4 sm:px-6 md:px-16 text-white">
          <div class="space-y-4">
             <img src="./images/logo-white.png" alt="logo" class="w-10/12 bg-transparent">
             <h4 class="">স্বাস্থ্যকথা একটি পূর্ণাঙ্গ টেলিমেডিসিন মোবাইল আপ্লিকেশন। স্বাস্থ্যকথা অ্যাপ ব্যবহার করে দেশব্যাপী বিনামূল্যে স্বাস্থ্য সেবা নিশ্চিতকরনের উদ্দেশে আমাদের পথচলা।</h4>
@@ -254,8 +254,8 @@
                <h5 class="">শর্তাবলী</h5>
             </div>
             <div class="flex items-center gap-2">
-               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
-               <h5 class="">গোপনীয়তা নীতি</h5>
+               <a href="./privacy-policy.html">               <img src="./images/arrow-icon.png" alt="" class="w-2 h-3"></a>
+               <a href="./privacy-policy.html">               <h5 class="">গোপনীয়তা নীতি</h5></a>
             </div>
             <div class="flex items-center gap-2">
                <img src="./images/arrow-icon.png" alt="" class="w-2 h-3">
