--- a/telemed web/privacy-policy.html
+++ b/telemed web/privacy-policy.html
@@ -218,7 +218,7 @@
         -11, Rd No 3, Dhaka 1216, Dhaka, Bangladesh.
       </p>
 
-      <p>
+      <p class="pt-6 md:pt-8 text-lg">
         By using the Shastokotha Website and App, you agree to the terms of this
         Privacy Policy.
       </p>
